Fix spacing and login screen

--- a/autocoders.frontend/www/css/style.css
+++ b/autocoders.frontend/www/css/style.css
@@ -1,3 +1,8 @@
+/* Override Ionic styles */
+.view-container {
+    top: 0;
+}
+
 /* Utility Classes */
 .ac-center {
     text-align: center;
